--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "commander": "^2.9.0",
     "connect-flash": "^0.1.1",
     "cookie-session": "^2.0.0-alpha.1",
+    "csurf": "^1.9.0",
     "express": "^4.13.4",
     "json-file-plus": "^3.2.0",
     "package-json": "^2.3.1",
